--- a/src/Main.css
+++ b/src/Main.css
@@ -14,7 +14,7 @@
 }
 
 .Main-header {
-  background-color: #282c34;
+  background-color: #616161;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
